--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,10 @@ header {
   margin-left: 20px;
 }
 
+.nav-links li :hover {
+  color: #f5d751;
+}
+
 .nav-links a {
   color: white;
   text-decoration: none;
