--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -13,6 +13,10 @@ body {
   line-height: 1.6;
 }
 
+.no-scroll {
+  overflow: hidden; /*bloqueia o background*/
+}
+
 header {
   background-color: #000000;
   color: white;
@@ -40,6 +44,10 @@ header {
 .nav-links li {
   display: inline;
   margin-left: 20px;
+}
+
+.nav-links li a:hover {
+  color: #f5d751;
 }
 
 .nav-links a {
@@ -148,17 +156,6 @@ header {
   margin-bottom: 1rem;
 }
 
-.contact a {
-  font-size: 1.2rem;
-  color: #333;
-  text-decoration: none;
-}
-
-.contact a:hover {
-  color: #555;
-  text-decoration: underline;
-}
-
 .modal {
   display: none;
   position: fixed;
@@ -183,6 +180,7 @@ header {
 }
 
 #caption {
+  position: relative; /*move a legenda*/
   margin: auto;
   text-align: center;
   color: #ccc;
@@ -208,7 +206,6 @@ header {
 }
 
 .zoomed {
-  transform: scale(2);
   cursor: zoom-out;
 }
 
